Fixed account active icon alignment

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -773,7 +773,7 @@ div[datepicker] {
     }
 
     .infobox-status {
-        vertical-align: top;
+        vertical-align: middle;
         height: 40px;
     }
 }
